# Otus_7

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: ArgParser.h  File.h  FileMonitor.h  FileMonitorParameters.h  Hasher.h
src/: main.cpp
